--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "v-github-icon": "^3.2.1"
   },
   "devDependencies": {
