--- a/frontend_1.0/package.json
+++ b/frontend_1.0/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "frontend_1.0",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,19 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/montserrat": "^5.0.17",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "gsap": "^3.12.5",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fontawesome": "^1.7.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.1.0",
+    "react-moving-text": "^0.0.7",
     "react-router-dom": "^6.22.3",
-    "react-spinners": "^0.13.8",
-    "v-github-icon": "^3.2.1"
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
