--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "framer-motion": "^11.3.28",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
